@@ -18,13 +18,17 @@ package org.springframework.boot.actuate.web.mappings.servlet;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.servlet.Filter;
 import jakarta.servlet.ServletContext;
 
+import org.springframework.aot.hint.BindingReflectionHintsRegistrar;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.RuntimeHintsRegistrar;
 import org.springframework.boot.actuate.web.mappings.MappingDescriptionProvider;
+import org.springframework.boot.actuate.web.mappings.servlet.FiltersMappingDescriptionProvider.FiltersMappingDescriptionProviderRuntimeHints;
 import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.ImportRuntimeHints;
 import org.springframework.web.context.WebApplicationContext;
 
 /**
@@ -34,13 +38,14 @@ import org.springframework.web.context.WebApplicationContext;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
+@ImportRuntimeHints(FiltersMappingDescriptionProviderRuntimeHints.class)
 public class FiltersMappingDescriptionProvider implements MappingDescriptionProvider {
 
 	@Override
 	public List<FilterRegistrationMappingDescription> describeMappings(ApplicationContext context) {
 		if (context instanceof WebApplicationContext webApplicationContext) {
 			return webApplicationContext.getServletContext().getFilterRegistrations().values().stream()
-					.map(FilterRegistrationMappingDescription::new).collect(Collectors.toList());
+					.map(FilterRegistrationMappingDescription::new).toList();
 		}
 		return Collections.emptyList();
 	}
@@ -48,6 +53,18 @@ public class FiltersMappingDescriptionProvider implements MappingDescriptionProv
 	@Override
 	public String getMappingName() {
 		return "servletFilters";
+	}
+
+	static class FiltersMappingDescriptionProviderRuntimeHints implements RuntimeHintsRegistrar {
+
+		private final BindingReflectionHintsRegistrar bindingRegistrar = new BindingReflectionHintsRegistrar();
+
+		@Override
+		public void registerHints(RuntimeHints hints, ClassLoader classLoader) {
+			this.bindingRegistrar.registerReflectionHints(hints.reflection(),
+					FilterRegistrationMappingDescription.class);
+		}
+
 	}
 
 }
