@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.jar.JarFile;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -63,10 +62,12 @@ class JarIntegrationTests extends AbstractArchiveIntegrationTests {
 			}).hasEntryWithNameStartingWith("BOOT-INF/lib/spring-context")
 					.hasEntryWithNameStartingWith("BOOT-INF/lib/spring-core")
 					.hasEntryWithNameStartingWith("BOOT-INF/lib/spring-jcl")
-					.hasEntryWithNameStartingWith("BOOT-INF/lib/jakarta.servlet-api-5")
+					.hasEntryWithNameStartingWith("BOOT-INF/lib/jakarta.servlet-api-6")
 					.hasEntryWithName("BOOT-INF/classes/org/test/SampleApplication.class")
 					.hasEntryWithName("org/springframework/boot/loader/JarLauncher.class");
-			assertThat(buildLog(project)).contains("Replacing main artifact with repackaged archive")
+			assertThat(buildLog(project))
+					.contains("Replacing main artifact " + repackaged + " with repackaged archive,")
+					.contains("The original artifact has been renamed to " + original)
 					.contains("Installing " + repackaged + " to").doesNotContain("Installing " + original + " to");
 		});
 	}
@@ -108,7 +109,9 @@ class JarIntegrationTests extends AbstractArchiveIntegrationTests {
 			assertThat(original).isFile();
 			File repackaged = new File(project, "target/jar-classifier-source-0.0.1.BUILD-SNAPSHOT-test.jar");
 			assertThat(jar(repackaged)).hasEntryWithNameStartingWith("BOOT-INF/classes/");
-			assertThat(buildLog(project)).contains("Replacing artifact with classifier test with repackaged archive")
+			assertThat(buildLog(project))
+					.contains("Replacing artifact with classifier test " + repackaged + " with repackaged archive,")
+					.contains("The original artifact has been renamed to " + original)
 					.doesNotContain("Installing " + original + " to").contains("Installing " + repackaged + " to");
 		});
 	}
@@ -397,8 +400,7 @@ class JarIntegrationTests extends AbstractArchiveIntegrationTests {
 			try (JarFile jar = new JarFile(repackaged)) {
 				List<String> unreproducibleEntries = jar.stream()
 						.filter((entry) -> entry.getLastModifiedTime().toMillis() != 1584352800000L)
-						.map((entry) -> entry.getName() + ": " + entry.getLastModifiedTime())
-						.collect(Collectors.toList());
+						.map((entry) -> entry.getName() + ": " + entry.getLastModifiedTime()).toList();
 				assertThat(unreproducibleEntries).isEmpty();
 				jarHash.set(FileUtils.sha1Hash(repackaged));
 				FileSystemUtils.deleteRecursively(project);
